# Mean-Reversion-Strategy

./: .env.example  .gitignore  README.md  mean_reversion_strategy_with_fees.ipynb  pyproject.toml
docs/: PROJECT_DOCUMENTATION.md
notebooks/: 01_bch_original.ipynb
scripts/: run_pivots.py  run_validation.py
src/meanrev/: __init__.py  calendar.py
src/meanrev/data/: historical.py
src/meanrev/signal/: mean_reversion.py
src/meanrev/validation/: gate.py  significance.py  walkforward.py
tests/: test_calendar.py  test_historical.py  test_signal.py  test_significance.py  test_walkforward.py
