[project]
name = "meanrev"
version = "0.1.0"
description = "Mean-reversion trading strategy: research, validation, and (eventually) live trading on SPY"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "scipy",
    "pandas-market-calendars",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pyarrow",
    "truststore",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
